Use Java 8 code